# LFP_B-_Proyecto1_202401939

./: .gitignore  CMakeLists.txt  README.md  relaciones.dot  reporte.html
docs/: AFD_MedLang.md
examples/: ejemplo_valido_1.med  ejemplo_valido_2.med
src/: main.cpp
src/core/: ErrorManager.cpp  ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MedLangParser.cpp  MedLangParser.h  Token.cpp  Token.h
src/core/models/: Appointment.h  Doctor.h  Patient.h
src/gui/: MainWindow.cpp  MainWindow.h
tests/: casos_prueba.md
